--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ganadería Offline",
-  "short_name": "Ganadería",
+  "name": "Ganaderia Nueva 2026",
+"short_name": "GanaderiaNueva",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0b1220",
